polkitd: Fix problem with removing non-existent source

https://bugs.freedesktop.org/show_bug.cgi?id=77167